sumo/tests/traci/VariableSubscription/errors/ArrivedVehicle/errors.traci
Error: Answered with error to command 164: Vehicle '0' is not known
Error: Answered with error to command 212: Could not add subscription (Vehicle '0' is not known).
